Request were missing 2

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -28,5 +28,6 @@
   "delete": "Löschen",
   "connected_as": "Verbunden als",
   "connection": "Anmeldung",
-  "inscription": "Registrierung"
+  "inscription": "Registrierung",
+  "followed_projects": "Gefolgte Projekte anzeigen"
 }
