--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -29,5 +29,6 @@
   "connected_as": "Connected as",
   "connection": "Login",
   "inscription": "Sign up",
-  "email": "Email"
+  "email": "Email",
+  "followed_projects": "View followed projects"
 }
