--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -28,5 +28,6 @@
   "delete": "Supprimer",
   "connected_as": "Connecté en tant que",
   "connection": "Connexion",
-  "inscription": "Inscription"
+  "inscription": "Inscription",
+  "followed_projects": "Voir les projets suivis"
 }
