--- a/public/lang/it.json
+++ b/public/lang/it.json
@@ -28,5 +28,6 @@
   "delete": "Elimina",
   "connected_as": "Connesso come",
   "connection": "Accesso",
-  "inscription": "Registrazione"
+  "inscription": "Registrazione",
+  "followed_projects": "Visualizza progetti seguiti"
 }
